--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,13 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
+Depends:
+    R (>= 3.6)
+Imports:
+    admiraldev (>= 1.0.0),
+    admiral (>= 1.0.0),
+    dplyr,
+    magrittr
 Suggests: 
     knitr,
     rmarkdown,
